--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,9 @@
   <ul>
     {% if g.user %}
       <li><span>{{ g.user['username'] }}</span>
+      <li><a href="{{ url_for('index')}}">Problem</a>
+      <li><a href="{{ url_for('pages.leaderboard')}}">Leaderboad</a>
+      <li><a href="{{ url_for('pages.account')}}">Account</a>
       <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
     {% else %}
       <li><a href="{{ url_for('auth.register') }}">Register</a>
