--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     {% if g.user %}
       <li><span>{{ g.user['username'] }}</span>
       <li><a href="{{ url_for('index')}}">Problem</a>
+      <li><a href="{{ url_for('pages.submission')}}">Submit</a>
       <li><a href="{{ url_for('pages.leaderboard')}}">Leaderboad</a>
       <li><a href="{{ url_for('pages.account')}}">Account</a>
       <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
